REGRESSION (279847@main): Rendering is broken after scrolling on build result page https://bugs.webkit.org/show_bug.cgi?id=275866 <rdar://130055235>

Reviewed by Simon Fraser.

In 279847@main we made an incorrect assumption that ancestor layers would take care of repainting their overflowing descendants.
This patch disables canUseSimplifiedRepaintPass for such subtrees with transform.

* LayoutTests/fast/repaint/simplified-layout-with-descendant-overflow-fails-expected.txt: Added.
* LayoutTests/fast/repaint/simplified-layout-with-descendant-overflow-fails.html: Added.
* Source/WebCore/rendering/RenderLayer.cpp:
(WebCore::RenderLayer::recursiveUpdateLayerPositions):

Canonical link: https://commits.webkit.org/280406@main